force-app/main/default/objects/Google_API_Details__c/Google_API_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google API Details</label>
</CustomObject>