force-app/main/default/objects/Google_API_Details__c/fields/distributor_login_site_url__c.field-meta.xml
<CustomField>
    <fullName>distributor_login_site_url__c</fullName>
    <label>distributor login site url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>