force-app/main/default/objects/Google_API_Details__c/fields/Login_Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>Login_Redirect_URI__c</fullName>
    <label>Login Redirect URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>